# WifiDemo

./: .gitignore  README.md  build.gradle  settings.gradle
DexCodeInsertPluginTest/: build.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: ijkplayer-java-release.aar
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hello.apk
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ijkmedia/ijkplayer/: ff_ffplay.c  ijkplayer.c  test.c
app/src/main/cpp/ijkmedia/ijkplayer/ijkavutil/: ijkstl.cpp
app/src/main/cpp/ijkmedia/ijksoundtouch/source/SoundStretch/: RunParameters.cpp
app/src/main/cpp/otherlibs/ffmpeg/include/libavutil/: thread.h
app/src/main/cpp/src/: test.cpp
app/src/main/java/test/: NetInterface.java  Network.java  abc.kt  test.kt
app/src/main/res/drawable/: appicon.xml  compass.xml  holyline_delete_icon.xml  holyline_scroll_unlock_icon.xml  indicator_focus_item.xml  indicator_item.xml  indicator_unfocus_item.xml  lock_icon_holygrail.xml  material3_background.xml  progressbar_shape.xml  rectangle_6.xml  test.xml  thumb1.xml  thumb3.xml  thumb_bg.xml  thumb_bg_select.xml  thumb_bg_unselect.xml  thumb_lock.xml  unlock_icon_holygrail.xml  viewpager_background.xml
app/src/main/res/layout/: activity_main.xml  activity_player.xml  bluetoothdeviceitem.xml  bottom_upgrade_hint.xml  camera.xml  compass_main.xml  compass_main_2.xml  coordinatorlayout_behavior_test.xml  coordinatorrlayout_test.xml  dialog_grail_model2.xml  (+14 more)
gradle/wrapper/: gradle-wrapper.properties
versionPlugin/: build.gradle
versionPlugin/src/main/java/: Deps.java
(+340 files in other folders)
